--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,33 +1,56 @@
-name: Laravel Test
+name: Laravel Tests
 
 on:
-  push:
-    branches: [ "main" ]
+  pull_request:
+    branches: [ "staging" ]
 
 jobs:
-  laravel-tests:
+  tests:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.1'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        with:
+          php-version: '8.1'
+      - uses: actions/checkout@v3
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: vendor/bin/phpunit
+
+  deployment:
+    runs-on: ubuntu-latest
+    environment: Staging
+
+    steps:
+      # Load the pre-build project files:
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: /tmp/github-actions
+
+      # Then deploy to your server of choice
+      - uses: php-actions/deploy
+        with:
+          hostname: api.inhaven.co
+          user: webdeploy
+          path: /var/www/cicd
+          ssh_key: { { secrets.SSH_KEY } }
+      - name: Become superuser
+        run: sudo su
+      - name: List everything
+        run: ls -la
