--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -53,7 +53,7 @@ jobs:
             hostname: api.inhaven.co
             user: root
             path: /var/www/cicd
-            ssh_key: {{ secrets.ssh_key }}
+            ssh_key: {{ secrets.SSH_KEY }}
         - name: Become superuser
           run: sudo su
         - name: List everything
